--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <title>Hello World</title>
+        <title>MbTerm</title>
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" href="css/lungo.css">
+        <link rel="stylesheet" href="css/lungo.icon.css">
+        <link rel="stylesheet" href="css/lungo.icon.brand.css">
+        <link rel="stylesheet" href="css/lungo.theme.css">
+ 
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+
+  <section id="main">
+    <header data-title="groupbar"></header>
+
+    <nav data-control="groupbar">
+        <a href="#" data-view-article="article_1" class="active">Art-1</a>
+        <a href="#" data-view-article="article_2">Art-2</a>
+    </nav>
+
+    <article id="article_1" class="active">{{CONTENT}}</article>
+    <article id="article_2">{{OTHER_CONTENT}}</article>
+</section>
+
+
+    </section>
+
+    <section id="second">
+        <header data-back="home" data-title="example"></header>
+        <article id="second_1">{{CONTENT}}</article>
+    </section>
+
+
+        <script src="js/quo.js"></script>
+        <script src="js/lungo.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
+            Lungo.init( {
+                "name": "Mi primera aplicacion",
+                "version": "0.0.1"
+            } );
             app.initialize();
         </script>
     </body>
