--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="css/lungo.icon.css">
         <link rel="stylesheet" href="css/lungo.icon.brand.css">
         <link rel="stylesheet" href="css/lungo.theme.css">
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
+      <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-light.min.css">
  
     </head>
     <body>
@@ -67,6 +69,7 @@
 
         <script src="js/quo.js"></script>
         <script src="js/lungo.js"></script>
+        <script charset="UTF-8" src="js/joydiv.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
