[EDIT] adecuando controles

--- a/www/index.html
+++ b/www/index.html
@@ -50,9 +50,9 @@
                 </div>
             </article>
 
-            <article id="article_2" >
+            <article id="article_2" class="active">
                 <div>
-                    <h1>Exomars</h1>
+                    <h1>Control</h1>
                     <ul>
                         <li>Ubaldino Zurita</li>
                         <li>Rudy Rafael Ramirez Caero Gates</li>
@@ -60,17 +60,18 @@
                 </div>    
             </article>
 
-            <article id="article_3" class="active">
+            <article id="article_3" >
                 <input type="text" id="direction" readonly>
-                <div id='controller' class="joydiv-controller">
-                    <div class="joydiv-up"></div>
-                    <div class="joydiv-left"></div>
-                    <div class="joydiv-right"></div>
-                    <div class="joydiv-down"></div>
-                    <div class="joydiv-trackpad">
-                        <div class="joydiv-tracker"></div>
+                    <div id='controller' class="joydiv-controller">
+                    <div id="bgcontroller"></div>
+                        <div class="joydiv-up"></div>
+                        <div class="joydiv-left"></div>
+                        <div class="joydiv-right"></div>
+                        <div class="joydiv-down"></div>
+                        <div class="joydiv-trackpad">
+                            <div class="joydiv-tracker"></div>
+                        </div>
                     </div>
-                </div>
                 <br><br><br><br>
                 <button id="joydiv-l" >abrir</button>
                 <button id="joydiv-m" >cerrar</button>
